:bug: fix uppercuz logo on mobile version

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -163,7 +163,7 @@ section {
 @media (max-width: 800px) {
   .announce-container {
     display: block;
-  }  
+  }
   .announce-table {
     margin-bottom: 20px;
   }
@@ -520,7 +520,7 @@ header a:hover {
   }
 	.sponsor-image {
 		height: 60px;
-	}	
+	}
   .sponsor-image.super-vip {
     height: 70px;
   }
@@ -539,6 +539,9 @@ header a:hover {
   }
   .sponsor-image.sp {
     height: 50px;
+  }
+  .sponsor-image.sp-uppercuz {
+    height: 30px;
   }
   .sponsor-image.p {
     height: 70px;
@@ -587,7 +590,7 @@ header a:hover {
 @keyframes timer {
   to {
     transform: scale(1);
-  }  
+  }
   from {
     transform: scale(1.2);
   }
@@ -823,7 +826,7 @@ header a:hover {
 @media (min-width: 1260px) {
 	.temple-mobile-slider {
 		display: none;
-	}	
+	}
 }
 
 @media (max-width: 830px) {
@@ -833,7 +836,7 @@ header a:hover {
 		left: calc(50% - 350px / 2);
 	}
 	.temple-mobile-slider > div {
-		
+
 	}
   .temple-division {
     height: 500px;
@@ -937,13 +940,13 @@ header a:hover {
 @keyframes godmode {
   0% {
     transform: scale(1);
-  }  
+  }
   50% {
     transform: scale(1.5);
   }
   100% {
     transform: scale(1);
-  }  
+  }
 }
 
 .register-number.content {
@@ -1346,7 +1349,7 @@ header a:hover {
   margin-top: 30px;
 }
 
-@media (max-width: 900px) {  
+@media (max-width: 900px) {
   .sponsor-wrapper{
     position: relative;
     background-color: rgb(239, 234, 230);
@@ -1479,10 +1482,10 @@ section.contact-us {
 }
 
 .gallery-container {
-	display: flex;	
+	display: flex;
 }
 .gallery-container > a {
-	flex: 1;	
+	flex: 1;
 	margin: 10px;
 }
 .gallery-container > a > div {
@@ -1493,7 +1496,7 @@ section.contact-us {
 @media (max-width: 800px) {
 	.gallery-content {
 		height: 500px;
-		overflow-y: scroll;		
+		overflow-y: scroll;
 	}
 	.gallery-container {
 		/* display: block; */
